--- a/css/w95.css
+++ b/css/w95.css
@@ -33,11 +33,11 @@
 }
 
 .bg-secondary {
-    background-color: #008081 !important;
+    background-color: #02d7f2 !important;
 }
 
 .bg-tertiary {
-    background-color: #000181 !important;
+    background-color: #c07e1b !important;
 }
 
 .bg-blue {
